# Natural-Language-Processing

./: .gitignore  README.md  assignment_1.py  pyproject.toml
results/checkpoint-8/: trainer_state.json
src/: assignment_1.py  helper.py
src/assignment_2/: assignment_2.py  data.py  helper.py  models.py  train.py
src/assignment_3/: assignment_3.py  data.py  helper.py  models.py  slice_ev.py  train.py
