[project]
name = "natural-language-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchtext>=0.18.0",
    "transformers>=5.3.0",
]
